<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:paddingBottom="@dimen/_20sdp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:gravity="center" />

            <SearchView
                android:id="@+id/sv_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:iconifiedByDefault="false"
                android:queryBackground="@color/transparent"
                android:background="@drawable/bg_search"
                android:queryHint="Search"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/category_list"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:paddingTop="@dimen/_10sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:orientation="horizontal"
                tools:listitem="@layout/item_category"
                tools:itemCount="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/meal_list"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:paddingTop="@dimen/_10sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:orientation="horizontal"
                tools:listitem="@layout/item_meal"
                tools:itemCount="1" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>