<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        android:background="@color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            app:contentScrim="@color/orange"
            app:expandedTitleMarginStart="@dimen/_16sdp"
            app:expandedTitleMarginEnd="@dimen/_72sdp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/riv_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:scaleType="centerCrop"
                android:foreground="@drawable/bg_shape_gradient"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                tools:ignore="UnusedAttribute" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:titleTextColor="@color/white" />

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_10sdp"
                android:layout_margin="@dimen/_15sdp"
                android:layout_gravity="start"
                android:background="@drawable/bg_back"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:contentDescription="@string/back_button" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp">

                    <TextView
                        android:id="@+id/tv_category_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/category_name"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_baseline_access_time_24"
                                android:contentDescription="@string/time_icon" />

                            <TextView
                                android:id="@+id/tv_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_30_min"
                                android:textSize="@dimen/_10ssp"
                                android:maxEms="10"
                                android:maxLines="2"
                                android:textStyle="bold"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingStart="@dimen/_5sdp"
                                android:paddingEnd="@dimen/_5sdp"
                                android:paddingBottom="@dimen/_10sdp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_baseline_access_time_24"
                                android:contentDescription="@string/time_icon" />

                            <TextView
                                android:id="@+id/tv_cal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_247_cals"
                                android:textSize="@dimen/_10ssp"
                                android:maxEms="10"
                                android:maxLines="2"
                                android:textStyle="bold"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingStart="@dimen/_5sdp"
                                android:paddingEnd="@dimen/_5sdp"
                                android:paddingBottom="@dimen/_10sdp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_baseline_access_time_24"
                                android:contentDescription="@string/time_icon" />

                            <TextView
                                android:id="@+id/tv_person"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_3_persons"
                                android:textSize="@dimen/_10ssp"
                                android:maxEms="10"
                                android:maxLines="2"
                                android:textStyle="bold"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingStart="@dimen/_5sdp"
                                android:paddingEnd="@dimen/_5sdp"
                                android:paddingBottom="@dimen/_10sdp"/>

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/ingredients"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        android:padding="@dimen/_10sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        android:padding="@dimen/_10sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>